[gd_scene load_steps=7 format=2]

[ext_resource path="res://Infos.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Mitwirkende.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Mitwirkende1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Zurück.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Zurück1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=6]

[node name="Infos" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 228.0
margin_top = 130.0
margin_right = 412.0
margin_bottom = 229.0

[node name="Mitwirkende" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 184.0
margin_bottom = 48.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="BackButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 184.0
margin_bottom = 99.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false
[connection signal="pressed" from="CenterContainer/VBoxContainer/Mitwirkende" to="." method="_on_Mitwirkende_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
